--- a/src/styles/layout/dafaultLayout.module.scss
+++ b/src/styles/layout/dafaultLayout.module.scss
@@ -1,18 +1,13 @@
-
-
-    .container{
+// sp/tb用のスタイル
+.container{
         width:90%;
-        margin:0 auto;
+        margin:50px auto;
         background-color:antiquewhite;
     }
 
-
 // PC用のスタイル
 @media (min-width: 900px) {
-
 .container{
     width:900px;
-    margin:0 auto;
-    background-color:antiquewhite;
 }
 }
