カテゴリーパーツ作成、レスポンシブ

--- a/src/styles/category/category.module.scss
+++ b/src/styles/category/category.module.scss
@@ -1,42 +1,82 @@
 $breakpoints: (
   pc: "screen and (min-width:1200px)",
-  tab: "screen and (max-width:610px)",
+  tab: "screen and (max-width:834px)",
   sp: "screen and (max-width:414px)",
 );
 
 @mixin mq($breakpoint: pc) {
-    @media #{map-get($breakpoints, $breakpoint)} {
-      @content;
-    }
+  @media #{map-get($breakpoints, $breakpoint)} {
+    @content;
   }
+}
+
+// .categoryContainer {
+//     width: 65%;
+//     max-height: 800px;
+//     margin: 50px auto;
+//     @include mq(sp) {
+//         width: 80%;
+//     }
+//     ul {
+//         display: flex;
+//         list-style: none;
+//         flex-wrap: wrap;
+//         justify-content: space-evenly;
+//     }
+//     li {
+//         margin: 20px;
+//         width: 150px;
+//         height: 150px;
+//         border: black solid;
+//         @include mq(tab) {
+//             width: 100px;
+//             height: 100px;
+//             margin: 10px;
+//         }
+//         @include mq(sp) {
+//             width: 80px;
+//             height: 80px;
+//             margin: 5px;
+//         }
+//     }
+// }
+
+// label {
+//   background-color: pink;
+//   padding: 10px 20px;
+// }
+
+// .categoryButton {
+//   display: none;
+// }
+// .categoryButton:checked + label {
+//   background-color: red;
+// }
 
 .categoryContainer {
-    width: 60%;
-    max-height: 800px;
-    margin: 50px auto;
-    @include mq(sp) {
-        width: 80%;
+  width: 80%;
+  margin: 0 auto;
+  text-align: center;
+  label {
+    display: inline-block;
+    input {
+      display: none;
     }
-    ul {
-        display: flex;
-        list-style: none;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
+    span {
+      color: #333;
+      font-size: 14px;
+      border: 1px solid #333;
+      //   padding: 30px;
+      margin: 10px;
+      display: inline-block;
+      width: 130px;
+      height: 130px;
     }
-    li {
-        margin: 25px;
-        width: 150px;
-        height: 150px;
-        border: black solid;
-        @include mq(tab) {
-            width: 100px;
-            height: 100px;
-            margin: 10px;
-        }
-        @include mq(sp) {
-            width: 80px;
-            height: 80px;
-            margin: 5px;
-        }
-    }
+  }
+}
+
+label input:checked + span {
+  color: #fff;
+  background: #fbb;
+  border: 1px solid #fbb;
 }
