ナビゲーションにログイン追加

--- a/src/styles/category/category.module.scss
+++ b/src/styles/category/category.module.scss
@@ -46,3 +46,9 @@ label input:checked + span {
   background: #fbb;
   border: 1px solid #fbb;
 }
+
+// .categoryButton:checked + span {
+//   color: #fff;
+//   background: #fbb;
+//   border: 1px solid #fbb;
+// }
