操作確認モーダルの作成、ナビゲーションアイコン追加

--- a/src/styles/category/category.module.scss
+++ b/src/styles/category/category.module.scss
@@ -22,6 +22,7 @@ $breakpoints: (
   }
   label {
     display: inline-block;
+    // background-image: url("../../images/pencil.png");
     input {
       display: none;
     }
@@ -47,8 +48,8 @@ label input:checked + span {
   border: 1px solid #fbb;
 }
 
-// .categoryButton:checked + span {
-//   color: #fff;
-//   background: #fbb;
-//   border: 1px solid #fbb;
+// .radio {
+//   width: 120px;
+//   height: 120px;
+//   background-image: url("../../images/pencil.png");
 // }
