--- a/src/styles/category/category.module.scss
+++ b/src/styles/category/category.module.scss
@@ -34,6 +34,7 @@ $breakpoints: (
       display: inline-block;
       width: 120px;
       height: 120px;
+      background-image: "../../pages/Home.tsx";
       @include mq(tab) {
         width: 70px;
         height: 70px;
