--- a/src/styles/form/formStyle.module.scss
+++ b/src/styles/form/formStyle.module.scss
@@ -1,22 +1,26 @@
 // sp/tb用のスタイル
-.inputMain{
-    text-align: center;
-    input{
-        width:80%;
-        border:4px solid #D9D9D9;
-        padding: 10px 4px;
-        margin-bottom:50px;
-        background-color: #fff;
-    }
+.inputMain {
+  text-align: center;
+  input {
+    width: 80%;
+    border: 4px solid #d9d9d9;
+    padding: 10px 4px;
+    margin-bottom: 50px;
+    background-color: #fff;
+  }
 }
-
 
 // pc用のスタイル
 @media (min-width: 900px) {
-    .inputMain{
-    input{
-        width:500px;
+  .inputMain {
+    input {
+      width: 500px;
     }
+  }
 }
+.PasswordReveal {
+  left: auto;
+  position: absolute;
+  right: 10px;
+  top: 10px;
 }
-  
