--- a/src/styles/reportPost/reportAll.module.scss
+++ b/src/styles/reportPost/reportAll.module.scss
@@ -8,12 +8,17 @@ $breakpoints: (
   width: 90%;
   margin: 0 auto;
 }
+.container {
+  background: #fff;
+  padding: 50px 0;
+  border-radius: 20px;
+}
 @media (min-width: 900px) {
   .postList {
     display: flex;
     align-items: center;
     margin: 5px auto;
-    border-bottom: 1px black solid;
+    border-bottom: 1px #d9d9d9 solid;
     width: 80%;
     label {
       display: table-cell;
@@ -35,4 +40,22 @@ $breakpoints: (
   .pie {
     width: 54%;
   }
+}
+.arrow {
+  position: relative;
+  border: 1px solid #000;
+  margin-top: 40px; /*なくてもOK*/
+  display: block;
+  width: 240px; /*ボタンの横幅指定*/
+  padding: 20px 0; /*上下余白指定*/
+  text-align: center; /*テキスト中央寄せ*/
+  color: #000;
+  font-size: 18px;
+}
+.icon {
+  position: absolute;
+  top: 50%;
+  right: 20px; /*右からの距離*/
+  width: 13px; /*アイコンの横幅指定*/
+  transform: translateY(-50%); /*この指定で上下中央に*/
 }
