--- a/src/styles/reportPost/reportCategory.module.scss
+++ b/src/styles/reportPost/reportCategory.module.scss
@@ -1,26 +1,34 @@
-table {
-  width: 50%;
-  margin: 0 auto;
-  border-spacing: 0;
-  // background-color: yellow;
-}
-
-th,
-td {
-  text-align: left;
-  padding: 20px 10px;
-  // background-color: pink;
-  // thのデフォルトでの太字回避のため
-  font-weight: normal;
-  border-bottom: 2px border #dddd;
-}
-
-.date {
-  padding: 8px 10px;
-  background-color: #f2b691;
-}
 .container {
   background: #fff;
   padding: 50px 0;
   border-radius: 20px;
+  table {
+    width: 80%;
+    margin: 0 auto;
+    border-spacing: 0;
+    // background-color: yellow;
+  }
+
+  th,
+  td {
+    text-align: left;
+    padding: 20px 10px;
+    // background-color: pink;
+    // thのデフォルトでの太字回避のため
+    font-weight: normal;
+    border-bottom: 2px border #dddd;
+  }
+
+  .date {
+    padding: 8px 10px;
+    background-color: #f2b691;
+  }
+
+  .block {
+    display: block;
+    width: 100%;
+  }
+  .textRight {
+    text-align: right;
+  }
 }
