--- a/src/styles/form/formStyle.module.scss
+++ b/src/styles/form/formStyle.module.scss
@@ -5,7 +5,7 @@
     width: 80%;
     border: 4px solid #d9d9d9;
     padding: 10px 4px;
-    margin-bottom: 50px;
+    margin-top: 30px;
     background-color: #fff;
   }
 }
