--- a/src/styles/reportPost/reportAll.module.scss
+++ b/src/styles/reportPost/reportAll.module.scss
@@ -29,6 +29,14 @@ $breakpoints: (
   }
   .textLeft {
     text-align: left;
+    width: 20%;
+  }
+  .block {
+    display: block;
+    width: 100%;
+  }
+  .subtotal {
+    width: 30%;
   }
 }
 @media (min-width: 900px) {
