--- a/src/styles/navigation/navigation.module.scss
+++ b/src/styles/navigation/navigation.module.scss
@@ -20,6 +20,14 @@ $breakpoints: (
       display: none;
     }
   }
+  img {
+    width: 180px;
+    height: 70px;
+    object-fit: cover;
+    @include mq(sp) {
+      display: none;
+    }
+  }
   @include mq(sp) {
     width: 100%;
     position: fixed;
@@ -40,8 +48,12 @@ $breakpoints: (
     list-style-type: none;
     text-align: center;
     font-size: 12px;
+    svg {
+      transition: all 0.3s;
+    }
     p {
       margin: 0;
+      transition: all 0.3s;
       @include mq(sp) {
         width: 50px;
       }
@@ -56,9 +68,13 @@ $breakpoints: (
       font-size: 10px;
     }
   }
-  img {
-    width: 50px;
-    height: 50px;
+  li:hover {
+    svg {
+      color: #2f4f4f;
+    }
+    p {
+      color: #2f4f4f;
+    }
   }
   a {
     text-decoration: none;
