--- a/src/styles/navigation/navigation.module.scss
+++ b/src/styles/navigation/navigation.module.scss
@@ -11,10 +11,16 @@ $breakpoints: (
 }
 
 .naviContainer {
-  display: flex;
-  justify-content: space-between;
+  // display: flex;
+  // justify-content: space-between;
+  width: 100%;
   padding: 5px 20px;
+  margin: auto;
   background-color: #dddddd;
+  nav {
+    display: flex;
+    justify-content: space-between;
+  }
   h1 {
     @include mq(sp) {
       display: none;
@@ -39,16 +45,20 @@ $breakpoints: (
 
 .naviList {
   display: flex;
-  width: 30%;
-  justify-content: space-around;
+  justify-content: right;
+  width: 45%;
   @include mq(sp) {
     margin: 0 auto;
+    justify-content: space-around;
   }
   li {
     list-style-type: none;
     text-align: center;
     font-size: 12px;
+    margin: 0 10px;
     svg {
+      width: 100%;
+      height: 70%;
       transition: all 0.3s;
     }
     p {
@@ -60,12 +70,14 @@ $breakpoints: (
     }
     @include mq(tab) {
       font-size: 10px;
+      margin: 0;
     }
     @include mq(sp) {
       width: 100px;
       text-align: center;
       padding: 0 20px;
       font-size: 10px;
+      margin: 0;
     }
   }
   li:hover {
