--- a/src/styles/reportPost/reportCategory.module.scss
+++ b/src/styles/reportPost/reportCategory.module.scss
@@ -32,3 +32,58 @@
     text-align: right;
   }
 }
+
+// ページング
+.pagination {
+  display: flex;
+  margin: 0 auto;
+
+  & > li {
+    margin: 0 12px;
+    & > a {
+      position: relative;
+      font-size: 0.8rem;
+      width: 24px;
+      height: 24px;
+      outline: none;
+      z-index: 100;
+      cursor: pointer;
+
+      &::before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 24px;
+        height: 24px;
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+        z-index: -100;
+      }
+
+      &:hover {
+        &::before {
+          background-color: rgba(255, 255, 255, 0.6);
+        }
+      }
+    }
+
+    &.active {
+      & > a::before {
+        background-color: white;
+      }
+    }
+  }
+
+  &__previous,
+  &__next {
+    & > a {
+      font-size: 0.7rem;
+    }
+  }
+
+  &__disabled {
+    display: none;
+  }
+}
