--- a/src/styles/category/category.module.scss
+++ b/src/styles/category/category.module.scss
@@ -64,3 +64,20 @@ $breakpoints: (
 label input:checked + span {
   border: 3px solid #8b0000;
 }
+
+.categoryChanege {
+  display: flex;
+  margin: 10px auto;
+  justify-content: center;
+  border: 1px solid black;
+  border-radius: 10px;
+  width: 50%;
+  button {
+    width: 50%;
+  }
+}
+
+.changeButton {
+  background-color: #ffad90;
+  border-radius: 10px;
+}
