プルダウンスタイル

--- a/src/styles/reportPost/reportCategory.module.scss
+++ b/src/styles/reportPost/reportCategory.module.scss
@@ -90,3 +90,11 @@
     display: none;
   }
 }
+// プルダウン
+.pulldownContainer {
+  width: 80%;
+  margin: 10px auto;
+}
+.pulldown {
+  width: 40%;
+}
